--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
     font-family: 'Courier New', Courier, monospace;
     font-weight: 300;
     position: relative;
-    height: 100vh;
+    height: 100vh;*
+   
     color: #555;
 }
 
@@ -33,6 +34,65 @@ body {
     background-color: #fff;
 }
 
+.modal-login {
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+.modal-content {
+    display: none;
+    padding: 10px;
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    background-color: #fff;
+    top: 25%;
+    left: 25%;
+    box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.20);
+}
+.close-button {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+}
+
+h1 {
+    margin: 2%;
+}
+
+.pc-flag {
+    margin: 3%;
+}
+
+.add-name-1,
+.add-name-2 {
+    width: 90%;
+    margin: 2%;
+    border: 1px solid black;
+    background-color: #fff;
+    color: black;
+    font-size: 14px;
+    padding: 12px 15px;
+    margin-right: 10px;
+    border-radius: 5px;
+    transition: border 0.3s;
+}
+.add-name-2:disabled{
+    border-color: darkgray;
+    background-color: lightgray;
+}
+
+#btn-new-modal {
+    left:35%;
+    top: 85%;
+}
+
 .rules {
     display: none;
     width: 83%;
@@ -42,6 +102,7 @@ body {
     left: 17%;
     color: black;
 }
+
 
 .rules-title {
     text-align: center;
@@ -200,5 +261,5 @@ button:focus {
     left: 53.8%;
     top: 30%;
     height: 100px;
-    box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.20);
 }
